--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Social-Network-Api",
+  "name": "socialnetworkapi",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
